--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-webpack-project",
+  "name": "REMEMBER ME - Todo App",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "Simple and minimal todo app.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
